# laser-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: DECISIONS.md  PHYSICS.md  ROADMAP.md  SURVEY.md  VALIDATION.md
examples/: measurements_template.json  simple_linear.json  zfold_ybyag.json
research/: DATA_SCHEMA.md  README.md
research/compare/: README.md
research/compare/decision_support/: .gitkeep
research/expdb/: PROTOCOL_ybfap_spectroscopy.md  README.md
research/expdb/logs/: .gitkeep  exp-TEMPLATE-ybfap-spectroscopy.json
research/litdb/: README.md
research/litdb/sources/: paper-aggarwal2005.json  paper-becker2016.json  paper-deloach1993.json  paper-furuse2021.json  paper-hopkins1971.json  paper-payne1994.json  paper-sumida1994.json  paper-takimoto2024.json  paper-zelmon1998.json
research/matdb/: README.md
research/matdb/materials/: mat-yb-fap.json  mat-yb-yag.json
research/optdb/: README.md
src/cavsim/: presets.py
src/cavsim/analysis/: astigmatism.py  beamfit.py  comparison.py  dispersion.py  scan.py  sensitivity.py
src/cavsim/core/: beam.py  cavity.py  elements.py  geometry.py  materials.py  matrices.py
src/cavsim/gui/: __init__.py  app.py  inspector.py  main_window.py  plots.py  viewport3d.py
src/cavsim/io/: __init__.py  project.py
tests/: test_astigmatism.py  test_beamfit.py  test_comparison.py  test_core.py  test_dispersion.py  test_geometry.py  test_scan2d.py  test_sensitivity.py  test_thermal.py
